# bevy_repro

./: Cargo.toml
assets/: scene.gltf  scene_no_roughness.gltf
src/: camera_control.rs  main.rs
