[package]
name = "bevy_repro"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy.git", rev = "4dbfdcf", features = ["jpeg"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3